--- a/_data/focloir.yml
+++ b/_data/focloir.yml
@@ -3,23 +3,28 @@
   bearla: if
   rann: cónasc
   sampla: a mbeadh a fhios aige
+  link: 
 - ainm: de
   leagan: a
   bearla: of
   rann: réamhfhocal
   sampla: a chois na teineadh
+  link: 
 - ainm: a
   leagan: a
   bearla: none
   rann: mír choibhneasta
   sampla: nuair a bíos an ghrian láidir
+  link: 
 - ainm: á
   leagan: á
   bearla: of
   rann: réamhfhocal
   sampla: gan á shásamh a fhágáil ag na hiolair
+  link: 
 - ainm: ábalta
   leagan: ábalta
   bearla: able
   rann: aidiacht
   sampla: ach mise a bheith ábalta aige, ag an diabhal bhean a luigheann sé
+  link: 
