--- a/_data/focloir.yml
+++ b/_data/focloir.yml
@@ -33,4 +33,118 @@
   bearla: moist clay
   rann: ainmfhocal
   sampla: Cuireann siad an t-abar fríd shligeáin. 
+  link: 
+- ainm: abhaile 
+  leagan: abhaile, chun an bhaile
+  bearla: home
+  rann: dobhriathar
+  sampla: ag tabhairt an scóid abhaile, bringing down the sail
+  link:
+- ainm: abhaile 
+  leagan: abhaile, chun an bhaile
+  bearla: home
+  rann: dobhriathar
+  sampla: dá mbeadh an lá chun an bhaile leofa 
+  link:
+- ainm: abhaill 
+  leagan: abhaill
+  bearla: orchard
+  rann: ainmfhocal
+  sampla: Tharraing sé ar an abhaill agus chuaidh sé suas i gcionn de na crainn
+  link:
+- ainm: abhainn 
+  leagan: abhainn
+  bearla: river
+  rann: ainmfhocal
+  sampla: agus an fheoil a bhí sailtithe aici a chaitheamh leis an abhainn
+  link:
+- ainm: abhar 
+  leagan: ábhar
+  bearla: a big wave
+  rann: ainmfhocal
+  sampla: chonaic sé an t-abhar ag éirí amuigh
+  link:
+- ainm: ábhar 
+  leagan: ábhar
+  bearla: is the reason for
+  rann: ainmfhocal
+  sampla: má gheibh aon fhear bán amach go deo cad é is ábhar leis
+  link:
+- ainm: ábhar 
+  leagan: ábhar
+  bearla: makings, stuff
+  rann: ainmfhocal
+  sampla: seo í ábhar mo mhnása
+  link:
+- ainm: ábhar 
+  leagan: ábhar
+  bearla: makings, stuff
+  rann: ainmfhocal
+  sampla: seo í ábhar mo mhnása
+  link:
+- ainm: ábhar 
+  leagan: ábhar
+  bearla: makings, stuff
+  rann: ainmfhocal
+  sampla: seo í ábhar mo mhnása
+  link:
+- ainm: ábhar 
+  leagan: ábhar
+  bearla: ammunition
+  rann: ainmfhocal
+  sampla: go raibh sé reaite as ábhar scaoilte
+  link:
+- ainm: abhartha 
+  leagan: abhartha
+  bearla: agitated
+  rann: aidiacht
+  sampla: tá an fharraige abhartha
+  link:
+- ainm: ach 
+  leagan: ach
+  bearla: on the contrary
+  rann: cónasc
+  sampla: níor stad sé ach ina ghaoth mhór agus ina fharraige go maidin 
+  link:
+- ainm: ach 
+  leagan: ach
+  bearla: unless, until
+  rann: cónasc
+  sampla: Ní rachaidh mé ach dá bhfaighidh mé scéala cinnte
+  link:
+- ainm: ach 
+  leagan: ach
+  bearla: emphatic before subjunctive clause 
+  rann: cónasc
+  sampla: bhí sé ag cur bhuartha orthu ach cé leis a dtitfeadh a gcuid saibhris i ndiaidh a bháis.
+  link:
+- ainm: ach 
+  leagan: ach
+  bearla: only because
+  rann: cónasc
+  sampla: D'éirigh liom ach go dtáinig Niall liom
+  link:
+- ainm: ach 
+  leagan: ach
+  bearla: but, for, that, unless
+  rann: cónasc
+  sampla: bheadh siad ina slí míghrinn ... ach murab é go gcuirfí chun an chnoic iad
+  link:
+- ainm: achainí 
+  leagan: athghuingne
+  bearla: entreaty
+  rann: ainmfhocal
+  sampla: d'iarr sé mar achainí air luascán a dhéanamh
+  link:
+- ainm: achainí 
+  leagan: athghuingne
+  bearla: for the love of God
+  rann: ainmfhocal
+  sampla: Mar achainí le Dia ort agus stad den ól
+  link:
+- ainm: achmair 
+  leagan: á
+  bearla: speedy
+  rann: aidiacht
+  sampla: Inis domh cá bhfuil an tslaitín go hachmair  
   link:
