--- a/_data/focloir.yml
+++ b/_data/focloir.yml
@@ -148,3 +148,23 @@
   rann: aidiacht
   sampla: Inis domh cá bhfuil an tslaitín go hachmair  
   link:
+- ainm: achmaireacht
+  leagan: achmaireacht
+  bearla: speed
+  rann: ainmfhocal
+  sampla: Cad é an t-achmaireacht atá sa teachtaire is achmaire aghat
+- ainm: achrannach
+  leagan: achrannach
+  bearla: contentious, charaterised by discord
+  rann: aidiacht
+  sampla: gidh gurbh iomaidh lá achrannach ... a bhíodh le déanamh
+- ainm: aclaí
+  leagan: acluigh
+  bearla: able to turn freely
+  rann: aidiacht
+  sampla: sileog ... a chaitheamh uirthi lena déanamh acluigh
+- ainm: acmhainn
+  leagan: acmhainn
+  bearla: resource
+  rann: ainmfhocal
+  sampla: daoine a raibh acamhainn acu dó
