--- a/_data/focloir.yml
+++ b/_data/focloir.yml
@@ -168,3 +168,13 @@
   bearla: resource
   rann: ainmfhocal
   sampla: daoine a raibh acamhainn acu dó
+- ainm: acra
+  leagan: acaire
+  bearla: acre, unit of distance
+  rann: ainmfhocal
+  sampla: buille ... a chuir naoi n-acaire agus naoi n-iomaire í
+- ainm: ádh
+  leagan: ádh
+  bearla: luck
+  rann: ainmfhocal
+  sampla: Is minic a tháinig ádh as ealaíon
